--- a/css/all.css
+++ b/css/all.css
@@ -187,7 +187,9 @@ a {
     text-decoration: none;
 }
 .wrapper{
-    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 .container {
     max-width: 768px;
@@ -295,6 +297,7 @@ header .headerBtn{
     text-align: center;
     color: #424242;
     padding: 48px 0;
+    flex: 1;
 }
 .main h2{
     margin-bottom: 36px;
